fixed spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3796,7 +3796,7 @@ input, select, textarea {
 		}
 
 		#main > .post {
-			padding: 8rem 8rem 6rem 8rem ;
+			padding: 8rem 8rem 0.5rem 8rem ;
 		}
 
 			#main > .post header.major > .date {
